# rust-gpio-simple-app

./: Cargo.toml  README.md
src/: main.rs
templates/: index.html.hbs
